--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
                     <div class="row1">
                         <img src=images/novsgs.jpg alt="poster" width="370" height="294">
                         <div class="datateam">
-                            <p class="camname">Póster de Nueva Orleans vs Estrella Dorada</p>
+                            <p class="camname">Póster de Nueva Orleans vs GSW</p>
                             <p class="branchp">Diseño</p>
                         </div>
                     </div>
